# exercises

./: .gitignore  README.md
FamilyTree/: .gitignore  Makefile  Makefile.in  configure  configure.ac  harry_graph.gv  qe2_graph.gv  qe2_short.gv  step_siblings.gv
FamilyTree/Debug/: Makefile  config.h  config.status  libtool
FamilyTree/Debug/src/: Makefile  familytree
FamilyTree/src/: Makefile  Makefile.am  Makefile.in  familytree  graph.gv  graph.png,  graph_emitter.cpp  graph_emitter.h  main.cc  person.cpp  person.h  relationship_labeler.cpp  relationship_labeler.h  relationship_type.h  tree.cpp  tree.h  tree_builder.cpp  tree_builder.h  tree_node.h  typedefs.h
