## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = familytree

familytree_SOURCES = \
	main.cc \
	person.cpp \
	person.h \
	tree_builder.h \
	tree_builder.cpp \
	typedefs.h \
	graph_emitter.cpp \
	graph_emitter.h \
	relationship_labeler.cpp \
	relationship_labeler.h \
	relationship_type.h \
	tree.cpp

familytree_CXXFLAGS = -std=c++11 

familytree_LDFLAGS = 

familytree_LDADD = 


